test/error/ArrayReadOnlyPtrModify.fu
public class Test
{
	public bool Run()
	{
		int[2] a;
		int[] p = a;
		p[1] = 4; //ERROR: Cannot modify collection through a read-only reference
		return true;
	}
}
